<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="55dp"
        android:paddingTop="30dp"
        android:text="@string/StartScreenTitle"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="?attr/colorPrimaryDark"
        android:textSize="36sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="@string/InputUserName"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputUserName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints="Insert your name"
            android:ems="10"
            android:hint="@string/StartEditTextHint"
            android:inputType="textPersonName" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="273dp"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="154dp"
            android:layout_height="71dp"
            android:background="#ff6f27"
            android:onClick="quizInteract"
            android:text="@string/StartButton"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>