<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    tools:context=".ResultActivity">


    <TextView
        android:id="@+id/mainTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingTop="175dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="0dp"
        android:text="@string/yourScoreTextString"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/restartQuizButton"
        android:layout_width="match_parent"
        android:layout_height="79dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="restartQuiz"
        android:text="@string/newQuizText" />

    <Button
        android:id="@+id/finishQuizButton"
        android:layout_width="wrap_content"
        android:layout_height="73dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/teal_200"
        android:onClick="finishQuiz"
        android:text="@string/finishButtonText" />
</LinearLayout>